fixing button visibility

--- a/src/style.scss
+++ b/src/style.scss
@@ -355,6 +355,10 @@ li > img {
 	text-align: left;
 }
 
+.glass-element p a {
+	background-color: #b168a497;
+}
+
 .padding-top {
 	padding-top: 10vh;
 }
